--- a/static/test.css
+++ b/static/test.css
@@ -28,7 +28,11 @@ font-size:20px;
 font-weight: normal;
 padding: 5px 10px;
 margin:0px;}
-
+h3 {
+font-size:20px;
+font-weight: normal;
+padding: 5px 10px;
+margin:0px;}
 img.download {vertical-align:middle;}
 
 /* ----------container to center the layout-------- */
